<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/btn_profile"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:textAlignment="center"
    android:visibility="visible"
    tools:context=".ProfileActivity"
    tools:visibility="visible">

    <ImageView
        android:id="@+id/imageView4"
        android:layout_width="165dp"
        android:layout_height="160dp"
        android:layout_marginStart="104dp"
        android:layout_marginTop="60dp"
        android:background="@android:color/black"
        android:contentDescription="@string/dude"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/passpo" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="262dp"
        android:layout_height="44dp"
        android:layout_marginStart="64dp"
        android:layout_marginTop="248dp"
        android:layout_marginEnd="60dp"
        android:autofillHints=""
        android:ems="10"
        android:text="@string/uwakwe_raymond"
        android:textAlignment="center"
        android:textAppearance="@style/TextAppearance.AppCompat.Display1"
        android:textColor="@color/colorAccent"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="237dp"
        android:layout_height="38dp"
        android:layout_marginStart="24dp"

        android:layout_marginTop="28dp"
        android:layout_marginEnd="8dp"
        android:autofillHints=""
        android:ems="10"
        android:text="Track: Andriod"
        android:textColor="@color/colorAccent"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="243dp"
        android:layout_height="40dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="368dp"
        android:layout_marginEnd="8dp"
        android:autofillHints=""
        android:ems="10"
        android:text="@string/country_nigeria"
        android:textColor="@color/colorAccent"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.014"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="331dp"
        android:layout_height="50dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="12dp"
        android:autofillHints=""
        android:ems="10"
        android:text="@string/email"
        android:textAlignment="viewStart"
        android:textColor="@color/colorAccent"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView4" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="341dp"
        android:layout_height="34dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="8dp"
        android:autofillHints=""
        android:ems="10"
        android:text="@string/phone_no_2349038810417"
        android:textColor="@color/colorAccent"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView5" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="331dp"
        android:layout_height="53dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:autofillHints=""
        android:ems="10"
        android:text="Slack Username - Uwakwe Raymond"
        android:textColor="@color/colorAccent"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.361"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView6"
        app:layout_constraintVertical_bias="0.089" />

</androidx.constraintlayout.widget.ConstraintLayout>